--- a/gb/19/9/30/n11555782.md
+++ b/gb/19/9/30/n11555782.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qqc2352/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qqc2352/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qqc2352/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qqc2352/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qqc2352/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qqc2352/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>芝加哥文教中心展间新意象 行销台湾</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/file_166642_s-600x400.jpg" />
 <h6>蔡烈辉老师暨学生为中心制作台湾意象油画合影。（芝加哥文教中心提供）
 </h6>
 <hr>
-	<p>【大纪元2019年09月30日讯】<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5%E6%96%87%E6%95%99%E4%B8%AD%E5%BF%83.md#1">芝加哥文教中心</a>近期重新布置中心展示间，墙上新添台湾等高线地图，周边并有台湾特有黑熊、天灯、兰花、<span lang="EN-US">101</span>大楼、蓝鹊、梅花鹿、水果、兰屿拼板舟及鹅銮鼻灯塔油画，为美中侨民及当地社区民众呈现台湾多元风貌。</p>
-<p>文教中心主任王伟赞特别感谢密西根人文协会潘宗由博士捐赠长<span lang="EN-US">14</span>呎、宽<span lang="EN-US">5</span>呎的“<ahref="https://github.com/qqc2352/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%AB%8B%E4%BD%93%E7%AD%89%E9%AB%98%E7%BA%BF%E5%9C%B0%E5%9B%BE%E6%A8%A1%E5%9E%8B.md#1">台湾立体等高线地图模型</a>”，及芝加哥胡涂画会蔡烈辉老师精湛绘出栩栩如生的黑熊、蓝鹊和梅花鹿、香甜可口的凤梨、香蕉、莲雾、荔枝、释迦等台湾季节水果和代表台湾地标的<span lang="EN-US">101</span>大楼等，和地图互相辉映，也更突显文教中心的台湾特色，文教中心未来将活用于各项教学及导览活动，尤其是针对当地学校学生校外教学进行台湾文化导览，让美国友台人士更深刻认识台湾。</p>
+	<p>【大纪元2019年09月30日讯】<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%8A%9D%E5%8A%A0%E5%93%A5%E6%96%87%E6%95%99%E4%B8%AD%E5%BF%83.md#1">芝加哥文教中心</a>近期重新布置中心展示间，墙上新添台湾等高线地图，周边并有台湾特有黑熊、天灯、兰花、<span lang="EN-US">101</span>大楼、蓝鹊、梅花鹿、水果、兰屿拼板舟及鹅銮鼻灯塔油画，为美中侨民及当地社区民众呈现台湾多元风貌。</p>
+<p>文教中心主任王伟赞特别感谢密西根人文协会潘宗由博士捐赠长<span lang="EN-US">14</span>呎、宽<span lang="EN-US">5</span>呎的“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E7%AB%8B%E4%BD%93%E7%AD%89%E9%AB%98%E7%BA%BF%E5%9C%B0%E5%9B%BE%E6%A8%A1%E5%9E%8B.md#1">台湾立体等高线地图模型</a>”，及芝加哥胡涂画会蔡烈辉老师精湛绘出栩栩如生的黑熊、蓝鹊和梅花鹿、香甜可口的凤梨、香蕉、莲雾、荔枝、释迦等台湾季节水果和代表台湾地标的<span lang="EN-US">101</span>大楼等，和地图互相辉映，也更突显文教中心的台湾特色，文教中心未来将活用于各项教学及导览活动，尤其是针对当地学校学生校外教学进行台湾文化导览，让美国友台人士更深刻认识台湾。</p>
 <p>潘宗由表示，台湾等高线地图原为<span lang="EN-US">107</span>年<span lang="EN-US">9</span>月<span lang="EN-US">15</span>日至<span lang="EN-US">16</span>日在底特律美术馆<span lang="EN-US">( Detroit Institute of Arts )</span>举行“密西根州第一届台湾文化节”所设计，当时特别于美术馆展览大厅展出，每一层为等高线<span lang="EN-US">200</span>公尺，总共<span lang="EN-US">19</span>层，让在地观众及游客感受到台湾包括平原、城市及高达近<span lang="EN-US">4</span>千公尺的玉山等复杂且多元性的地理环境，也特别感谢文教中心同意协助保存这个地图及设计别出心裁的展示墙，让更多美国中西部台湾乡亲及美国社群认识台湾文化。</p>
 <p>蔡烈辉多年来在文教中心、中文学校及社区大学等地开设绘画班推广艺术，去年更在芝加哥文化中心<span lang="EN-US">(Chicago Cultural Center)</span>举办个人作品展，让侨胞及国际友人感受家乡美景及更进一步认识台湾，用文化推动外交，本次除特别绘制台湾黑熊等多幅台湾特色油画赠送中心，并以象征大海及天空的蓝色为底色，让陈列其中的台湾岛屿意象活化，带给中心焕然一新面貌。</p>
 <p>文教中心展间台湾新意象自展出后深获芝加哥侨界与当地人士佳评，侨民纷纷表示台湾立体地图及画作呈现台湾丰富天然资源，也常勾起浓浓的思乡心情，希望能带子女回台湾游览及推介美国友人到文教中心认识台湾这独一无二的家乡。</p>
@@ -17,36 +17,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/17/n11389628.md#1">郑文灿：桃园是台商回流最佳选择</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/25/n11408754.md#1">620摊位 台湾美食展登场</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/19/8/1/n11423258.md#1">最可爱观光大使 台湾喔熊热气球法国升空</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/17/n11389628.md#1">郑文灿：桃园是台商回流最佳选择</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/25/n11408754.md#1">620摊位 台湾美食展登场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/8/1/n11423258.md#1">最可爱观光大使 台湾喔熊热气球法国升空</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491587.md#1" target="_blank">《共产党宣言》是共产邪灵向人类的宣战书</a></li><li><a href="https://github.com/qqc2352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/16/n9964704.md#1" target="_blank">刘晓：正统婚礼有深意 中共扭曲藏祸心</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12126108.md#1">组图：两会开幕北京天空突变黑 民：天怒</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12126990.md#1">豪大雨袭台 全台湾22日停班停课一览【不断更新】</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124357.md#1">回击赵立坚？川普：请跟这笨蛋解释一下</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12123695.md#1">新一波疫情在中国爆发 与上一波有三大不同</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124118.md#1">陆男翻墙被罚五百元 网民：应抓中共发言人</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/19/n12121988.md#1">爆大陆副导演潜规则 台亲共女星拒绝后遭暴力</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124356.md#1">梁朝伟房产被强制拍卖 刘嘉玲炒房大赚不够赔</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12127097.md#1">中共强推“港版国安法”一众港星发文谴责</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124884.md#1">自曝辞演《还珠格格》原因 郑爽被质疑太荒唐</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12122671.md#1">得知爸爸是假面骑士 女儿反应让水嶋斐吕感动</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/19/n12120346.md#1">曾预言中共肺炎 印度男孩：12月有更大灾难</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/18/n12117961.md#1">《地母经》预言 2020年大难年内不会结束</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/14/n12108060.md#1">“朝三暮四”与“朝四暮三” 讲了什么道？</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/21/n12125394.md#1">获权分配百万奖金 大陆职业经理人的故事</a></li>
-<li><a href="https://github.com/qqc2352/djy/blob/master/gb/20/5/20/n12124139.md#1">二娘修法轮功 穷棒子村有福了</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qqc2352/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qqc2352/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/30/n11555782.htm">芝加哥文教中心展间新意象 行销台湾</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/30/n11555782.htm">芝加哥文教中心展间新意象 行销台湾</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qqc2352/djy/blob/master/gb/19/9/30/n11555782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qqc2352/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qqc2352/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qqc2352/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qqc2352/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qqc2352/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/9/30/n11555782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
